  |              point the client is assumed to be stable. Code that
  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.4.2.121 2002/06/14 00:10:27 andreasb Exp $
==========================================================================

2.8000
------

2.8018.472  fix: macosx: fix crash in battery pause code from #2465 (#2615)
            fix: macosx: config menu displayed erroneous message that pause
                         on battery was not supported.
            fix: win32: core throughput: summary column not zeroed (#2630)
            new: x86: detect Celeron 4 (#2673)

2.8017.471  (not publicly released)
            new: x86: P4 RC5 core (ak-p7)
            imp: x86: better intel and AMD chip identification. (#2448, #2424)
            fix: x86: Win2K, WinXP: disabled crashing RC5 SMC core. (#2399)
            new: alpha: OGR core for processors supporting the CIX extension.
            imp: sparc: improved OGR core. (#2480)
            fix: ppc: linux kernel cpu string additions. (#2407)
            new: all: configurable frequent update failure retry interval.
            fix: all: client ignores "--" on command line by itself. (#2474)
            fix: all: Errors in generated man page (#2451)
            fix: all: lurking caused ENETDOWN on -fetch/-flush/-update (#2417)
            fix: hpux: threading, timing fixes (#2371)
            fix: fbsd: occasionally not responding to SIG(INT/TERM) (#1985)
            fix: decunix: also not responding to SIG(INT/TERM) (#1613)
            fix: linux: no alpha SMP support (#2142)
            new: macosx: platform-specific read me doc (#2580)
            new: macosx: now supports -[un]install for /Library/StartupItems/